lib/src/sdk/rust/snapshots/usage__sdk__rust__tests__rust_negate_flag_build.snap
---
source: lib/src/sdk/rust/mod.rs
expression: client
---
//! @generated by usage-cli from test.usage.kdl. Do not edit manually.
use std::process::Command;

use crate::runtime::{CliRunner, CliResult};
use crate::types::{AppFlags};

pub struct App {
    runner: CliRunner,
}

impl App {
    pub fn new(bin_path: &str) -> Self {
        let runner = CliRunner::new(bin_path);
        Self {
            runner,
        }
    }

    pub fn default_bin() -> Self {
        Self::new("app")
    }
    /// [--dry-run]

    pub fn exec(&self, flags: Option<AppFlags>) -> Result<CliResult, crate::runtime::CliError> {
        let mut cmd_args: Vec<String> = vec![];
        let flag_args = self.build_flag_args(flags);
        cmd_args.extend(flag_args);
        self.runner.run(cmd_args)
    }

    fn build_flag_args(&self, flags: Option<AppFlags>) -> Vec<String> {
        let mut result = Vec::new();
        let flags = match flags { Some(f) => f, None => return result };
        if let Some(v) = flags.dry_run { if v { result.push("--dry-run".to_string()); } else { result.push("--no-dry-run".to_string()); } }
        result
    }
}
