lib/src/sdk/rust/snapshots/usage__sdk__rust__tests__rust_optional_variadic_arg.snap
---
source: lib/src/sdk/rust/mod.rs
expression: client
---
//! @generated by usage-cli from test.usage.kdl. Do not edit manually.
use std::process::Command;

use crate::runtime::{CliRunner, CliResult};
use crate::types::{ToolArgs};

pub struct Tool {
    runner: CliRunner,
}

impl Tool {
    pub fn new(bin_path: &str) -> Self {
        let runner = CliRunner::new(bin_path);
        Self {
            runner,
        }
    }

    pub fn default_bin() -> Self {
        Self::new("tool")
    }
    /// [files]…

    pub fn exec(&self, args: ToolArgs) -> Result<CliResult, crate::runtime::CliError> {
        let mut cmd_args: Vec<String> = vec![];
        if let Some(ref files) = args.files { cmd_args.extend(files.iter().map(|v| v.to_string())); }
        self.runner.run(cmd_args)
    }
}
